# .claude

./: .claude.json  .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  README.md  lefthook.yml  settings.json  statusline.sh
.agent/: README.md
.agent/commands/auth/: nextjs_clerk.md
.agent/commands/ui/: d3.md
achives/agents/: api-documenter.md  debugger.md  performance-engineer.md  prompt-engineer.md  react-performance-optimization.md  web-research-specialist.md
agents/: automation-scout.md  doc-updater.md  duplicate-checker.md  followup-suggester.md  learning-extractor.md  prompt-engineer.md  react-performance-optimization.md
commands/ui/: d1.md  d2.md
hook-utils/: user_prompt_submit
hook-utils/say-summary/: README.md  pyproject.toml
hook-utils/say-summary/hooks/: hooks.json
hook-utils/say-summary/scripts/: setup.sh
hooks/: user_prompt_submit
mcp-servers/crawl4ai-mcp-server/: README.md
skills/: README.md
skills/dev/: SKILL.md
skills/dev-frontend/: SKILL.md
skills/gmail/: accounts.yaml
skills/google-calendar/: SKILL.md
skills/kakaotalk/: .gitignore  README.md  SKILL.md  pyproject.toml
skills/kakaotalk/scripts/: kakao_read.py  kakao_send.py
skills/notion/: SKILL.md
skills/youtube/: SKILL.md
tasks/1417e4eb-812a-45a9-b0d2-2ebd15618015/: 1.json  2.json  3.json
tasks/bc1574d3-b42a-46f7-bcda-52bb70069bc1/: 1.json  2.json  3.json  4.json  5.json  6.json
usage-data/: report.html
usage-data/facets/: b864d3bd-2d6f-4350-a696-0a1fa9be3a6d.json  cf64cc2a-612f-4cf1-ae82-97edf777159e.json  e9f2e8ee-9141-46e8-9033-14d350904012.json
(+19 files in other folders)
