[project]
name = "kakaotalk-skill"
version = "0.1.0"
description = "KakaoTalk messaging skill for Claude Code"
requires-python = ">=3.11"
dependencies = [
    "atomacos>=3.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scripts"]
